# wwqdrh

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
handle/build_logcenter/: Makefile  README.marp.md  README.md  stack.yaml  volume-read.py  volume-write.py
handle/build_logcenter/conf/: loki.yaml  promtail.yaml
handle/cacheqa/: README.md  go.mod  go.sum  main.go  main_test.go
handle/cacheqa/testdata/: test.db
handle/dbmigrate/: README.md  go.mod  go.sum  main.go  test.db
handle/dbmigrate/migrations/: 000001_create_users_table.up.sql
handle/do_auth/: README.md  go.mod  go.sum  main.go  main_test.go
handle/do_auth/acl/: policy.csv
handle/do_auth/micro/: README.md  auth.py  basic.py  basic_ingress.conf  stack.yaml  stream.conf
handle/do_auth/times/: model.conf  policy.csv
handle/gomemory/: README.md  main
handle/gomemory/gc/: main.go
handle/how_api_test/: README.md  api.py  docs.km  test.json
poetry/唐/: 王维.md
use_dapr/01-start/: docs.md
use_dapr/01-start/python/: app.py
use_dapr/02-basic/: app.py  docs.md
use_dapr/02-basic/bindings/: single-kafka.yml
use_dapr/03-gray/: Makefile  docs.md  stack.yaml
use_dapr/03-gray/appv1/: Dockerfile  app.py
use_dapr/03-gray/appv2/: Dockerfile  app.py
use_dapr/03-gray/gateway/: Dockerfile  app.conf  simple.conf
use_dapr/04-doaapp/: README.md  makefile  stack.yaml
use_dapr/04-doaapp/go/: go.mod
use_dapr/04-doaapp/python/: app.py
use_dapr/04-doaapp/react-calculator/: package-lock.json  package.json  pnpm-lock.yaml  server.js
use_dapr/05-trywasm/: Makefile  README.md
(+18 files in other folders)
