[tool.poetry]
name = "broadcast"
version = "0.1.0"
description = ""
authors = ["wwqdrh <huiloademail@163.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.87.0"
uvicorn = "^0.20.0"
requests = "^2.28.1"
python-dotenv = "^0.21.0"
flask = "^2.2.2"
flask-cors = "^3.0.10"
click = "^8.1.3"
itsdangerous = "^2.1.2"
jinja2 = "^3.1.2"
markupsafe = "^2.1.1"
six = "^1.16.0"
werkzeug = "^2.2.2"


[tool.poetry.group.dev.dependencies]
mypy = "^0.991"
black = "^22.10.0"
pytest = "^7.2.0"


[tool.poetry.group.types.dependencies]
types-requests = "^2.28.11.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
